<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instructions"
    android:orientation="vertical"
    android:id="@+id/lay1">

    <LinearLayout
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay2"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SOS App User Guide"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:padding="10dp"
            android:textSize="16sp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            app:cardUseCompatPadding="true"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/lay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@drawable/add_contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/add"
                    android:textSize="15sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact List"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_background"
            android:padding="7.5dp"/>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:id="@+id/lay4"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/guide_background"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/contactt"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Message"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_background"
            android:padding="7.5dp"/>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:id="@+id/lay5"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/guide_background"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@drawable/edit_message"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help Line Number"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_background"
            android:padding="7.5dp"/>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:id="@+id/lay6"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/guide_background"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@drawable/helpline"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SOS Guides"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_background"
            android:padding="7.5dp"/>
        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:id="@+id/lay7"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/guide_background"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@drawable/guide"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Aid Guide"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>